2007-09-14  George Liu <george.liu@ricoh-tech.com>

        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_3050N_PXL.ppd
        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_5050N_PXL.ppd
        * Added: db/source/printer/Ricoh-GX_3050N.xml
        * Added: db/source/printer/Ricoh-GX_5050N.xml
	* Modified: db/source/driver/pxlmono.xml

2007-10-11  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/st640ihg.upp.xml, driver/st640ih.upp.xml,
	  driver/st640pg.upp.xml, driver/st640plg.upp.xml,
	  driver/st640pl.upp.xml, driver/st640p.upp.xml,
	  driver/stc1520h.upp.xml, driver/stc2_h.upp.xml,
	  driver/stc2s_h.upp.xml, driver/stc2.upp.xml,
	  driver/stc300bl.upp.xml, driver/stc300bm.upp.xml,
	  driver/stc300.upp.xml, driver/stc500ph.upp.xml,
	  driver/stc500p.upp.xml, driver/stc600ih.upp.xml,
	  driver/stc600pl.upp.xml, driver/stc600p.upp.xml,
	  driver/stc640p.upp.xml, driver/Stc670pl.upp.xml,
	  driver/Stc670p.upp.xml, driver/Stc680pl.upp.xml,
	  driver/Stc680p.upp.xml, driver/stc740ih.upp.xml,
	  driver/stc740pl.upp.xml, driver/stc740p.upp.xml,
	  driver/Stc760pl.upp.xml, driver/Stc760p.upp.xml,
	  driver/Stc777pl.upp.xml, driver/Stc777p.upp.xml,
	  driver/stc800ih.upp.xml, driver/stc800pl.upp.xml,
	  driver/stc800p.upp.xml, driver/stcany.upp.xml,
	  driver/stc_h.upp.xml, driver/stc_l.upp.xml, driver/stc.upp.xml,
	  driver/Stp720pl.upp.xml, driver/Stp720p.upp.xml,
	  driver/Stp870pl.upp.xml, driver/Stp870p.upp.xml,
	  driver/PM760pl.upp.xml, driver/PM760p.upp.xml,
	  driver/PM820pl.upp.xml, driver/PM820p.upp.xml: Marked all UPP
	  files for Epson inkjet printers obsolete. Gutenprint gives much
	  better results on these printers.

2007-10-09  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/HP/HP_Designjet_5000_PS3.ppd,
	  PPD/HP/HP_Designjet_5500_PS3.ppd,
	  PPD/HP/HP_Designjet_800_PS3.ppd: Let the HP DesignJets appear
	  under the manufacturer "HP" and not "DesignJet" in printer setup
	  tools.

2007-10-01  John Hosszu <john.hosszu@hp.com>

	* printer/: Added