@@ -7,8 +7,7 @@
   <prototype>gs %B -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE %A%Z -sOutputFile=- -</prototype>
  </execution>
  <comments>
-  <en>The printing system/execution information for this driver serves for all the
-stc670*.upp drivers. This upp can be used with Parallel or USB interfaces.</en>
+  <en>The printing system/execution information for this driver serves for all the Stc670*.upp drivers. This upp can be used with Parallel or USB interfaces.</en>
  </comments>
  <printers>
   <printer>
