@@ -4,11 +4,10 @@
  <obsolete replace="gutenprint" />
  <execution>
   <uniprint />
-  <prototype>gs %B -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE %A%Z -sOutputFile=- -</prototype>
+  <prototype></prototype>
  </execution>
  <comments>
-  <en>The printing system/execution information for this driver serves for all the
-stc670*.upp drivers. This upp can be used with Parallel or USB interfaces.</en>
+  <en>See Stc670p.upp for more information.</en>
  </comments>
  <printers>
   <printer>
