@@ -8,7 +8,7 @@
  </execution>
  <comments>
   <en>The printing system/execution information for this driver serves for all the
-stc760*.upp drivers. Can be used with Parallel or USB interfaces.</en>
+Stc760*.upp drivers. Can be used with Parallel or USB interfaces.</en>
  </comments>
  <printers>
   <printer>
