@@ -7,7 +7,7 @@
   <prototype />
  </execution>
  <comments>
-  <en>See stc760pl.upp for more information.</en>
+  <en>See Stc760p.upp for more information.</en>
  </comments>
  <printers>
   <printer>
