@@ -1,4 +1,11 @@
-2007-09-14  George Liu <george.liu@ricoh-tech.com>
+2007-12-02  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/Stc670pl.upp.xml: Removed command line prototype, the PPDs
+	  for this driver are generated by the "Stc670p.upp" driver entry.
+	* driver/Stc670p.upp.xml, driver/Stc760p.upp.xml,
+	  driver/Stc760pl.upp.xml: Text corrections.
+
+2007-10-22  George Liu <george.liu@ricoh-tech.com>
 
         * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_3050N_PXL.ppd
         * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_5050N_PXL.ppd
